--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,5 +1,11 @@
 .box.about-box {
   flex-flow: row nowrap;
+  justify-content: center;
+}
+
+.about__description {
+  width: 40%;
+  font-size: 1.2rem;
 }
 
 .about__title {
@@ -12,13 +18,25 @@
     fill: $font-light;
   }
 
-  width: 70%;
-  margin-bottom: 2rem;
+  width: 55%;
+  margin-bottom: 1rem;
+}
+
+.about__technologies {
+  margin-top: 2rem;
+  p {
+    line-height: 80%;
+  }
+
+  h3 {
+    color: $accent-light;
+    font-size: 1.6rem;
+  }
 }
 
 .about__image {
   width: 40%;
   height: 85%;
-  margin-right: 10rem;
+  margin-right: 8rem;
   background: black;
 }
