--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,8 +2,8 @@ $main-color: #161a1d;
 $background-color: #b1a7a6;
 $light-element: #d3d3d3;
 $accent: #660708;
-$accent-light: #ba181b;
+$accent-light: #a4161a;
 $font-dark: #0b090a;
 $font-light: #f5f3f4;
-$title-font: "Parisienne", cursive;
+$placeholder-font: "Roboto", sans-serif;
 $regular-font: "Roboto Condensed", sans-serif;
