--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -34,9 +34,18 @@
   }
 }
 
-.about__image {
-  width: 40%;
+.about__image-container {
+  width: 36%;
   height: 85%;
   margin-right: 8rem;
-  background: black;
+  overflow: hidden;
+  position: relative;
+}
+
+.about__image {
+  position: absolute;
+  top: -4rem;
+  object-fit: cover;
+  width: 100%;
+  opacity: 0.8;
 }
