--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -35,17 +35,91 @@
 }
 
 .about__image-container {
-  width: 36%;
-  height: 85%;
-  margin-right: 8rem;
+  width: 40%;
+  height: 84%;
+  margin-right: 2.5%;
+  background: $accent-light;
   overflow: hidden;
   position: relative;
 }
 
 .about__image {
   position: absolute;
-  top: -4rem;
   object-fit: cover;
   width: 100%;
-  opacity: 0.8;
+  height: 100%;
+  object-position: 50% 20%;
+  opacity: 0.85;
+}
+
+@media (max-width: 1024px) {
+  .about__title {
+    width: 70%;
+  }
+
+  .about__description {
+    font-size: 1rem;
+  }
+
+  .about__technologies {
+    & > p {
+      line-height: 0.3rem;
+    }
+  }
+}
+
+@media (max-width: 768px), (max-width: 1024px) and (min-height: 1366px) {
+  .box.about-box {
+    flex-flow: column nowrap;
+    justify-content: center;
+  }
+
+  .about__description {
+    font-size: 1.2rem;
+    margin-top: 2rem;
+    width: 80%;
+    text-align: center;
+
+    > p,
+    > div,
+    > div > p {
+      text-align: left;
+    }
+  }
+
+  .about__image-container {
+    width: 80%;
+    height: 45%;
+  }
+
+  .about__technologies {
+    & > p {
+      line-height: 0.1rem;
+      display: inline-block;
+      margin: 0 0.1rem;
+      &::after {
+        content: " // ";
+      }
+    }
+    & > p:last-child::after {
+      content: "";
+    }
+  }
+}
+
+@media (max-width: 1024px) and (min-height: 1366px) {
+  .about__description {
+    font-size: 1.55rem;
+  }
+}
+
+@media (max-width: 540px) {
+  .about__image-container {
+    margin-top: 3rem;
+    display: none;
+  }
+
+  .about__technologies {
+    margin-bottom: 3rem;
+  }
 }
