--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,6 +1,7 @@
 .contact-box {
   flex-flow: row nowrap;
   justify-content: space-around;
+  padding: 0;
 }
 
 .contact__title {
@@ -59,7 +60,7 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: stretch;
-  z-index: 20;
+  z-index: 35;
 }
 
 .contact__form-field {
@@ -119,4 +120,233 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+}
+
+@media (max-width: 1366px) {
+  .contact__text {
+    line-height: 100%;
+  }
+
+  .contact__sm {
+    width: 10rem;
+  }
+}
+
+@media (max-width: 1024px) {
+  .contact__title {
+    width: 25rem;
+  }
+
+  .contact__text > p {
+    margin-bottom: -0.4rem;
+    line-height: 110%;
+  }
+
+  .contact__sm {
+    & > .icon {
+      width: 3rem;
+      margin-bottom: 0.5rem;
+      path {
+        fill: $font-light;
+      }
+    }
+
+    & > .lin {
+      width: 3rem;
+    }
+    font-size: 0.7rem;
+  }
+
+  .contact__text-sm {
+    margin-left: -1.5rem;
+  }
+
+  .contact__form-field {
+    width: 18rem;
+  }
+}
+
+@media (max-width: 768px), (max-width: 1024px) and (min-height: 1366px) {
+  .contact-box {
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact__form {
+    width: 100%;
+    height: 45%;
+
+    .contact__form-border {
+      left: 26px;
+      top: -26px;
+      height: 100%;
+      width: calc(100% - 2 * 26px);
+    }
+
+    h3 {
+      margin-top: -1rem;
+    }
+  }
+
+  .contact__text {
+    width: 80%;
+    margin-top: 9.5rem;
+  }
+
+  .contact__text-sm {
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 0.7rem;
+    grid-template-areas:
+      "phone mail lin"
+      ".  git .";
+  }
+
+  .contact__sm {
+    margin-top: 0.7rem;
+
+    &:nth-child(1) {
+      grid-area: phone;
+    }
+
+    &:nth-child(2) {
+      grid-area: mail;
+    }
+
+    &:nth-child(3) {
+      grid-area: lin;
+    }
+
+    &:nth-child(4) {
+      grid-area: git;
+    }
+  }
+}
+
+@media (max-width: 1024px) and (min-height: 1366px) {
+  .contact__text {
+    margin-top: 12rem;
+  }
+
+  .contact__form {
+    height: 50%;
+  }
+
+  .contact__text-sm {
+    margin-top: 2rem;
+  }
+}
+
+@media (max-width: 540px) {
+  .contact__text {
+    margin-bottom: 4rem;
+    margin-top: 25rem;
+    min-height: 45vh;
+  }
+
+  .contact__form {
+    min-height: 60vh;
+  }
+}
+
+@media (max-width: 480px) {
+  .contact__title {
+    width: 78%;
+  }
+
+  .contact__text {
+    width: 78%;
+    margin-top: 25rem;
+    margin-bottom: 3rem;
+    min-height: 50vh;
+  }
+
+  .contact__form-field {
+    width: 15rem;
+  }
+
+  .contact__text-sm {
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "phone mail"
+      "lin  git";
+  }
+}
+
+@media (max-width: 320px) and (max-height: 568px) {
+  .contact__title {
+    width: 75%;
+    top: 13%;
+  }
+
+  .contact__text {
+    width: 75%;
+    margin-top: 26rem;
+    min-height: 65vh;
+  }
+
+  .contact__form-field {
+    width: 15rem;
+  }
+
+  .contact__text-sm {
+    width: 75%;
+    margin-top: 2rem;
+    margin-left: -2.9rem;
+  }
+
+  .contact__sm {
+    font-size: 0.5rem;
+  }
+
+  .contact__form {
+    min-height: 65vh;
+  }
+
+  .contact__form-field {
+    width: 13rem;
+  }
+}
+
+@media (max-width: 280px) {
+  .contact__title {
+    width: 75%;
+    top: 13%;
+  }
+
+  .contact__text-sm {
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+      "phone"
+      "mail"
+      "lin"
+      "git";
+    margin-left: 1rem;
+    margin-top: 1.2rem;
+  }
+
+  .contact__text {
+    width: 75%;
+    margin-top: 30rem;
+    min-height: 82vh;
+  }
+
+  .contact__form-field {
+    width: 15rem;
+  }
+
+  .contact__sm {
+    font-size: 0.5rem;
+  }
+
+  .contact__form {
+    min-height: 65vh;
+  }
+
+  .contact__form-field {
+    width: 13rem;
+  }
 }
