--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -16,7 +16,7 @@
 
 .projects__panel {
   height: 40%;
-  width: 65%;
+  width: 70%;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -30,14 +30,19 @@
   height: 16rem;
   background: $light-element;
   position: relative;
+  overflow: hidden;
   margin: 0 0.2rem;
   padding: 0;
+  z-index: 55;
 }
 
 .projects__tile-img {
+  position: relative;
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: 105%;
+  height: 105%;
+  object-position: 50% 50%;
+  transition: all 0.5s linear;
 }
 
 .projects__tile-overlay {
@@ -54,8 +59,24 @@
   background: scale-color($accent-light, $alpha: -30%);
 }
 
+.projects__tile-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column nowrap;
+  text-align: center;
+  overflow: hidden;
+}
+
 .projects__tile:hover .projects__tile-overlay {
   display: flex;
+}
+
+.projects__tile:hover .projects__tile-img {
+  width: 120%;
+  height: 120%;
+  object-position: 160% 50%;
+  transition: all 0.5s linear;
 }
 
 .projects__tile-technologies {
@@ -77,5 +98,143 @@
 
   &:hover {
     color: $font-dark;
+  }
+}
+
+@media (max-width: 1024px) {
+  .projects__title {
+    width: 15rem;
+  }
+
+  .projects__panel {
+    height: 60%;
+    width: 60%;
+  }
+
+  .projects__tile {
+    width: 10rem;
+    height: 10rem;
+  }
+
+  .projects__tile-overlay {
+    display: flex;
+    background: none;
+  }
+
+  .projects__tile-box {
+    background: $background-color;
+    clip-path: circle(50% at 50% 50%);
+    padding: 0.5rem;
+    width: 65%;
+    height: 65%;
+  }
+
+  .projects__tile-title {
+    font-size: 0.85rem;
+    color: $accent;
+    font-weight: bold;
+  }
+
+  .projects__tile-technologies {
+    display: none;
+  }
+
+  .projects__tile-links {
+    font-size: 0.8rem;
+    margin-top: -0.9rem;
+  }
+
+  .projects__tile-live,
+  .projects__tile-code {
+    color: $font-light;
+    font-weight: normal;
+  }
+}
+
+@media (max-width: 1024px) and (min-height: 1366px) {
+  .projects__title {
+    width: 25rem;
+  }
+
+  .projects__panel {
+    height: 45%;
+    width: 70%;
+  }
+
+  .projects__tile {
+    width: 13rem;
+    height: 13rem;
+  }
+
+  .projects__tile-title {
+    font-size: 1rem;
+  }
+
+  .projects__tile-links {
+    font-size: 1rem;
+    margin-top: -0.9rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .projects__panel {
+    height: 45%;
+    width: 65%;
+  }
+}
+
+@media (max-width: 540px) {
+  .projects__panel {
+    height: 60%;
+    width: 80%;
+  }
+}
+
+@media (max-width: 480px) {
+  .projects {
+    position: relative;
+    display: block;
+  }
+
+  .projects-box {
+    position: relative;
+    top: 0;
+    min-height: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0;
+  }
+
+  .projects__title {
+    width: 17rem;
+    position: absolute;
+    top: 5rem;
+  }
+  .projects__panel {
+    position: relative;
+    min-height: 100%;
+    width: 80%;
+    padding-top: 15rem;
+    padding-bottom: 5rem;
+  }
+
+  .projects__tile {
+    width: 13rem;
+    height: 13rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .projects__tile-title {
+    font-size: 1.1rem;
+  }
+
+  .projects__tile-links {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .projects__title {
+    width: 14rem;
   }
 }
