--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -38,7 +38,7 @@
   width: 40%;
   height: 84%;
   margin-right: 2.5%;
-  background: $accent-light;
+  background: $accent;
   overflow: hidden;
   position: relative;
 }
@@ -50,6 +50,14 @@
   height: 100%;
   object-position: 50% 20%;
   opacity: 0.85;
+}
+
+.reveal {
+  visibility: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 @media (max-width: 1024px) {
