--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -11,7 +11,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 30;
 }
 
 .nav__button {
@@ -136,6 +135,8 @@
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
+    position: fixed;
+    z-index: 100;
   }
 
   .nav_showed {
@@ -146,7 +147,7 @@
     display: flex;
     align-items: center;
     justify-self: center;
-    position: absolute;
+    position: fixed;
     width: 3.5rem;
     height: 3.5rem;
     outline: none;
@@ -157,7 +158,7 @@
     background: $light-element;
     transform: rotate(45deg);
     cursor: pointer;
-    z-index: 45;
+    z-index: 110;
     transition: all 0.5s linear;
   }
 
